---
source: tests/snapshot.rs
assertion_line: 114
expression: run_result.output

---
(HOST) DEBUG found 1 probes
(HOST) DEBUG opened probe
(HOST) DEBUG started session
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) DEBUG Erased sector of size 4096 bytes in 120 ms
(HOST) DEBUG Erased sector of size 4096 bytes in 98 ms
(HOST) DEBUG Programmed page of size 4096 bytes in 61 ms
(HOST) DEBUG Programmed page of size 4096 bytes in 63 ms
(HOST) INFO  success!
(HOST) DEBUG vector table: VectorTable { initial_stack_pointer: 2003fbc0, hard_fault: 1771 }
(HOST) DEBUG RAM region: 0x20000000-0x2003FFFF
(HOST) DEBUG section `.data` is in RAM at 0x2003FBC0..=0x2003FBF7
(HOST) DEBUG section `.bss` is in RAM at 0x2003FBF8..=0x2003FBFF
(HOST) DEBUG section `.uninit` is in RAM at 0x2003FC00..=0x2003FFFF
(HOST) DEBUG valid SP range: 0x20000000..=0x2003FBBC
(HOST) DEBUG 261052 bytes of stack available (0x20000000 ..= 0x2003FBBC), using 26108 byte canary
(HOST) TRACE setting up canary took 0.022s (1162.52 KiB/s)
(HOST) DEBUG starting device
(HOST) DEBUG Successfully attached RTT
────────────────────────────────────────────────────────────────────────────────
ERROR panicked at 'explicit panic'
────────────────────────────────────────────────────────────────────────────────
(HOST) TRACE reading canary took 0.023s (1131.21 KiB/s)
(HOST) DEBUG stack canary intact
(HOST) TRACE 0x00001770: found FDE for 0x00001770 .. 0x00001788 at offset 20
(HOST) TRACE uwt row for pc 0x00001770: UnwindTableRow { start_address: 6000, end_address: 6024, saved_args_size: 0, cfa: RegisterAndOffset { register: Register(13), offset: 0 }, registers: RegisterRuleMap { rules: [] } }
(HOST) DEBUG LR=0xFFFFFFF9 PC=0x00001770
(HOST) TRACE 0x00001620: found FDE for 0x00001620 .. 0x00001624 at offset 1388
(HOST) TRACE uwt row for pc 0x00001620: UnwindTableRow { start_address: 5664, end_address: 5668, saved_args_size: 0, cfa: RegisterAndOffset { register: Register(13), offset: 0 }, registers: RegisterRuleMap { rules: [] } }
(HOST) DEBUG LR=0x00001611 PC=0x00001620
(HOST) TRACE 0x00001610: found FDE for 0x00001608 .. 0x00001612 at offset 1084
(HOST) TRACE uwt row for pc 0x00001610: UnwindTableRow { start_address: 5644, end_address: 5650, saved_args_size: 0, cfa: RegisterAndOffset { register: Register(7), offset: 8 }, registers: RegisterRuleMap { rules: [(Register(14), Offset(-4)), (Register(7), Offset(-8))] } }
(HOST) DEBUG update_cfa: CFA changed Some(2003fba8) -> 2003fbb0
(HOST) TRACE update reg=Register(14), rule=Offset(-4), abs=0x2003fbac -> value=0x0000017f
(HOST) TRACE update reg=Register(7), rule=Offset(-8), abs=0x2003fba8 -> value=0x2003fbb0
(HOST) DEBUG LR=0x0000017F PC=0x00001610
(HOST) TRACE 0x0000017e: found FDE for 0x00000162 .. 0x00000180 at offset 80
(HOST) TRACE uwt row for pc 0x0000017e: UnwindTableRow { start_address: 358, end_address: 384, saved_args_size: 0, cfa: RegisterAndOffset { register: Register(7), offset: 8 }, registers: RegisterRuleMap { rules: [(Register(14), Offset(-4)), (Register(7), Offset(-8))] } }
(HOST) DEBUG update_cfa: CFA changed Some(2003fbb0) -> 2003fbb8
(HOST) TRACE update reg=Register(14), rule=Offset(-4), abs=0x2003fbb4 -> value=0x00000161
(HOST) TRACE update reg=Register(7), rule=Offset(-8), abs=0x2003fbb0 -> value=0x2003fbb8
(HOST) DEBUG LR=0x00000161 PC=0x0000017E
(HOST) TRACE 0x00000160: found FDE for 0x00000158 .. 0x00000162 at offset 52
(HOST) TRACE uwt row for pc 0x00000160: UnwindTableRow { start_address: 348, end_address: 354, saved_args_size: 0, cfa: RegisterAndOffset { register: Register(7), offset: 8 }, registers: RegisterRuleMap { rules: [(Register(14), Offset(-4)), (Register(7), Offset(-8))] } }
(HOST) DEBUG update_cfa: CFA changed Some(2003fbb8) -> 2003fbc0
(HOST) TRACE update reg=Register(14), rule=Offset(-4), abs=0x2003fbbc -> value=0x0000013d
(HOST) TRACE update reg=Register(7), rule=Offset(-8), abs=0x2003fbb8 -> value=0x00000000
(HOST) DEBUG LR=0x0000013D PC=0x00000160
(HOST) TRACE 0x0000013c: found FDE for 0x00000100 .. 0x0000013e at offset 36
(HOST) TRACE uwt row for pc 0x0000013c: UnwindTableRow { start_address: 256, end_address: 318, saved_args_size: 0, cfa: RegisterAndOffset { register: Register(13), offset: 0 }, registers: RegisterRuleMap { rules: [] } }
(HOST) DEBUG LR=0x0000013D PC=0x0000013C
(HOST) TRACE demangle Ok("_ZN3lib6inline5__udf17ha5cfb7665e0fe90cE") (language=Some(DwLang(1C))) -> Ok("lib::inline::__udf")
(HOST) TRACE demangle Ok("__udf") (language=Some(DwLang(1C))) -> Ok("__udf")
(HOST) TRACE demangle Ok("_ZN8cortex_m3asm3udf17hf580bd6f648768cdE") (language=Some(DwLang(1C))) -> Ok("cortex_m::asm::udf")
(HOST) TRACE demangle Ok("_defmt_panic") (language=Some(DwLang(1C))) -> Ok("_defmt_panic")
(HOST) TRACE demangle Ok("_ZN5defmt6export5panic17h35131ca09663314fE") (language=Some(DwLang(1C))) -> Ok("defmt::export::panic")
(HOST) TRACE demangle Ok("_ZN5panic18__cortex_m_rt_main17h987df67efcfbeac1E") (language=Some(DwLang(1C))) -> Ok("panic::__cortex_m_rt_main")
(HOST) TRACE demangle Ok("main") (language=Some(DwLang(1C))) -> Ok("main")
stack backtrace:
   0: 0x00001770 @ HardFaultTrampoline
      <exception entry>
   1: 0x00001620 @ lib::inline::__udf
        at ./asm/inline.rs:181:5
   2: 0x00001620 @ __udf
        at ./asm/lib.rs:51:17
   3: 0x00001610 @ cortex_m::asm::udf
        at [cortex-m-0.7.7]/src/call_asm.rs:19:21
   4: 0x00001610 @ _defmt_panic
        at /test_elfs/src/lib.rs:12:5
   5: 0x0000017e @ defmt::export::panic
        at [defmt-0.3.4]/src/export/mod.rs:133:14
   6: 0x0000017e @ panic::__cortex_m_rt_main
        at /test_elfs/src/bin/panic.rs:8:5
   7: 0x00000160 @ main
        at /test_elfs/src/bin/panic.rs:6:1
   8: 0x0000013c @ Reset
(HOST) ERROR the program panicked

